--- a/sherry-dev/index.html
+++ b/sherry-dev/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
-    <h1>Finally done with some git shit</h1>
+    <div id="main">
+       <div id="nav">
+         <div id="nav-part1">
+            <h3>Menu</h3>
+            <i class="ri-menu-3-fill"></i>
+         </div>
+         <div id="nav-part2">
+            <h1>Dentytech</h1>
+         </div>
+         <div id="nav-part3">
+            <button>Login</button>
+            <button>Signup</button>
+         </div>
+       </div>
+    </div>
 </body>
 </html>
