--- a/sherry-dev/index.html
+++ b/sherry-dev/index.html
@@ -22,9 +22,22 @@
          </div>
          <div id="nav-part3">
             <button>Login</button>
-            <button>Signup</button>
+            <button id="salmon-btn">Signup</button>
          </div>
        </div>
+       <h1 id="main-heading">Our Advantages</h1>
+       <img id="img3"src="https://images.unsplash.com/photo-1508179522353-11ba468c4a1c?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+       <img id="img2"src="https://images.unsplash.com/photo-1520975661595-6453be3f7070?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+       <img id="img0"src="https://images.unsplash.com/photo-1612802687608-49884a90c5e0?q=80&w=3328&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+       <img id="img1"src="https://images.unsplash.com/photo-1492288991661-058aa541ff43?q=80&w=3387&" alt="">
+       <p id="circle"></p>
+       <h5 id="bottom-text-left">Your Smile, Our Passion</h5>
+        <div id="bottom-right">
+            <i class="ri-instagram-line"></i>
+            <i class="ri-youtube-line"></i>
+            <i class="ri-facebook-circle-line"></i>
+        </div>
+        <h5 id="bottom-text-right"> Best Start Up of 2023</h5>
     </div>
 </body>
 </html>
