--- a/sherry-dev/index.html
+++ b/sherry-dev/index.html
@@ -14,11 +14,11 @@
     <div id="main">
        <div id="nav">
          <div id="nav-part1">
-            <h3>Menu</h3>
+           
             <i class="ri-menu-3-fill"></i>
          </div>
          <div id="nav-part2">
-            <h1>Dentytech</h1>
+            <h1>Symmetry</h1>
          </div>
          <div id="nav-part3">
             <button>Login</button>
